--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,7 @@
     <module>xchange-stream-service-core</module>
     <module>xchange-stream-service-netty</module>
     <module>xchange-stream-service-pubnub</module>
+    <module>xchange-stream-deribit</module>
   </modules>
 
   <ciManagement>
